Changes in javaGeom library

javaGeom-0.7.1 (2009.??.??, rev. ??)

- added static builders for PolyBezierCurve2D
- added accessors in Ellipse2D
- added Hyperbola2D.getAsymptotes()
- fixed bug in HyperbolaBranch2D
- fixed clipping of Empty CurveSet2D
- Point2D.clip now returns an instance of PointSet2D


javaGeom-0.7.0 (2009-02-17, rev. 192)

New features
- Added Convex hull by Graham scan
- Added point package, which contains point set implementations, and the
	interface PointShape2D.
- Added KDTree2D
- Conic2D now implements Boundary2D
- added Angle2D.getPseudoAngle();

Regressions
- Shape2D does not inherit from java.awt.Shape anymore, reducing the number of
	methods for most classes
- removed useless classes:
	+ Disc2D, ParametricConic2D, HalfPlane2D
- removed obsolete methods:
	+ Polygon2D.getVerticesNumber()
	+ PointSet2D.getPointsNumber()
	+ Conic2D.getCartesianEquation()
	+ Transform2D.transform(Point2D, Point2D) -> Point will become immutable
- deprecated classes with doubtful use:
	+ empty shapes
	+ Point2D.INFINITY_POINT

Code
- moved Polylines into polygon package, and renamed 'ClosedPolyline2D' as
    'Ring2D'
- moved PointSet2D into point package
- renamed 'LineObject2D' to 'Line2D', and changed its implementation
    
    
javaGeom-0.6.3 (2008-12-22, rev. 167)

New features
- Added Convex hull by Jarvis March
- instances of Domain2D can be complemented
- added methods to draw shapes:
	+ Curve2D.draw(),
	+ Boundary2D.fill(),  
	+ Domain2D.fill(), Domain2D.draw()
	+ Box2D.draw(), Box2D.fill()
	+ Point2D.draw(), PointSet2D.draw()
- implemented getWindingAngle() of EllipseArc2D, ParabolaArc2D
- added Polyline2D.getVertex() and Polygon2D.getVertex()
	
Regressions
- removed Shape2D.defaultClipWindow
- changed names of methods in polylines and polygons: 
	+ 'Points' -> 'Vertices'
	+ 'verticesNumber' -> 'vertexNumber'
- remove deprecated methods 
	+ getClippedShape in Point2D
- changed AffineTransform2D.getInverseTransform() to invert()

Bug fixes